# bazel-test

./: MODULE.bazel
main/: BUILD  main.cpp
synth/: BUILD
