"""
MODULE.bazel
"""

module(
    name = "bazel-test",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

register_toolchains(
    "@rules_foreign_cc//toolchains:built_ninja_toolchain",
)

# Boost
archive_override(
    module_name = "rules_boost",
    urls = "https://github.com/nelhage/rules_boost/archive/master.tar.gz",
    strip_prefix = "rules_boost-master",
    integrity = "sha256-cbYu58gx1KNH739zub4MCJ2I39ZpQmxPPY91cTiGhlA=",
)
non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)

git_repository(
    name = "fruit",
    remote = "https://github.com/google/fruit",
    commit = "f47f76e4cf02843e9ebc88e3e2f8181553ac3ab2",
    strip_prefix = "extras/bazel_root",
)